methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:2: error: not found: value poseBrosse
  poseBrosse()
  ^