methods.picture.PictureMono1.scala.code
def faireV() {
  poseBrosse()
  leveBrosse()
  avance();gauche();avance()
  for (k <- 1 to 2) {
    droite()
    avance()
  }
  gauche() 
}
override def run() {
  for(k <- 1 to 4) {
    avance(2)
  	faireV()
  	avance(2)
  	gauche()
	}
}

